loopwhile.LoopWhile.scala.error
Compilation error:
LoopWhile:4: error: reassignment to val
    while (isFacingWall=false)
                       ^